force-app/main/default/objects/MarcoSLA__c/MarcoSLA__c.object-meta.xml
<CustomObject>
    <description>Representa um marco válido para parametrização de SLA dentro de uma Gestão de SLA. O marco deve corresponder a um Milestone Type associado ao Entitlement Process configurado.</description>
    <label>Marco SLA</label>
    <nameField>
        <label>Nome do Marco SLA</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marcos SLA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>