force-app/main/default/objects/MarcoSLA__c/fields/FonteTempo__c.field-meta.xml
<CustomField>
    <fullName>FonteTempo__c</fullName>
    <description>Indica onde o Apex deve buscar o tempo do marco.</description>
    <label>Fonte do Tempo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GestaoSLA</fullName>
            </value>
            <value>
                <fullName>RegraSLA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>