force-app/main/default/objects/MarcoSLA__c/fields/GestaoSLA__c.field-meta.xml
<CustomField>
    <fullName>GestaoSLA__c</fullName>
    <label>Gestão de SLA</label>
    <referenceTo>GestaoSLA__c</referenceTo>
    <relationshipLabel>Marcos SLA</relationshipLabel>
    <relationshipName>MarcosSLA</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>