force-app/main/default/objects/MarcoSLA__c/fields/MilestoneTypeName__c.field-meta.xml
<CustomField>
    <fullName>MilestoneTypeName__c</fullName>
    <description>Nome exato do Milestone Type associado no Entitlement Process.</description>
    <label>Nome do Milestone Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>