force-app/main/default/objects/MarcoSLA__c/fields/NomeMarco__c.field-meta.xml
<CustomField>
    <fullName>NomeMarco__c</fullName>
    <description>Nome funcional do marco.</description>
    <label>Nome do Marco</label>
    <length>120</length>
    <type>Text</type>
</CustomField>