force-app/main/default/objects/MarcoSLA__c/fields/TempoFallbackMinutos__c.field-meta.xml
<CustomField>
    <fullName>TempoFallbackMinutos__c</fullName>
    <description>Tempo (em minutos) usado por este Marco quando o cálculo via Regra de SLA não encontra uma Regra correspondente (ex: Case ainda sem Categorização). Se em branco, mantém o fallback padrão do sistema (1 minuto).</description>
    <inlineHelpText>Tempo de fallback (minutos) quando não há Regra de SLA para a Categorização do Case. Em branco = usa o padrão do sistema.</inlineHelpText>
    <label>Tempo de Fallback (min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>