force-app/main/default/objects/MarcoSLA__c/fields/TipoRecorrencia__c.field-meta.xml
<CustomField>
    <fullName>TipoRecorrencia__c</fullName>
    <label>Tipo de Recorrência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NaoRecorrente</fullName>
                <default>true</default>
                <label>NaoRecorrente</label>
            </value>
            <value>
                <fullName>Independente</fullName>
            </value>
            <value>
                <fullName>Sequencial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>