force-app/main/default/objects/MarcoSLA__c/fields/UsaAreaInterna__c.field-meta.xml
<CustomField>
    <fullName>UsaAreaInterna__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Usa Área Interna</label>
    <type>Checkbox</type>
</CustomField>