force-app/main/default/objects/MarcoSLA__c/fields/UsaCategorizacao__c.field-meta.xml
<CustomField>
    <fullName>UsaCategorizacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Usa Categorização</label>
    <type>Checkbox</type>
</CustomField>