force-app/main/default/objects/MarcoSLA__c/fields/UsaOrigem__c.field-meta.xml
<CustomField>
    <fullName>UsaOrigem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Usa Origem</label>
    <type>Checkbox</type>
</CustomField>